test/1.2/errors/T_EAMBDEFAULT.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;

device test;

template a {
    /// ERROR EAMBDEFAULT
    method m() default {
    }
}

template b {
    /// ERROR EAMBDEFAULT
    method m() default {
    }
}

/// WARNING WEXPERIMENTAL
trait c {
    method m() throws default {
    }
}

port p1 {
    is a;
    is b;
    /// WARNING WEXPERIMENTAL
    method m() default {
        /// ERROR EAMBDEFAULT
        call default();
    }
}

port p2 {
    is a;
    is c;
    /// WARNING WEXPERIMENTAL
    method m() {
        /// ERROR EAMBDEFAULT
        call default();
    }
}

method init() {
    call $p1.m();
    call $p2.m();
}
